# Extended-Tracking

./: README.md  编译过程可能遇到的问题.txt
Extended-Tracking/: CMakeLists.txt  build.sh  clean.sh
Extended-Tracking/examples/extented-tracking/: .nftSimple.c.kate-swp  ARMarkerNFT.cc  ARMarkerNFT.h  extended-tracking.cc  trackingSub.c
Extended-Tracking/include/: Frame.h  Initializer.h  ORBextractor.h  System.h  Tracking.h
Extended-Tracking/include/AR/: config.h  param.h
Extended-Tracking/include/AR2/: config.h  template.h  tracking.h
Extended-Tracking/include/KPM/: kpm.h  kpmType.h
Extended-Tracking/lib/SRC/: Makefile
Extended-Tracking/lib/SRC/.kdev4/: SRC.kdev4
Extended-Tracking/lib/SRC/AR/: Makefile  arUtil.c
Extended-Tracking/lib/SRC/AR2/: AR2.kdev4  Makefile  featureMap.c  handle.c  imageSet.c  jpeg.c  surface.c  tracking.c  tracking2d.c
Extended-Tracking/lib/SRC/AR2/.kdev4/: AR2.kdev4
Extended-Tracking/lib/SRC/ARICP/: Makefile
Extended-Tracking/lib/SRC/ARMulti/: Makefile
Extended-Tracking/lib/SRC/ARWrapper/: ARController.cpp  ARMarker.cpp  ARMarkerMulti.cpp  ARMarkerNFT.cpp  ARMarkerSquare.cpp  ARPattern.cpp  ARToolKitVideoSource.cpp  ARToolKitWrapperExportedAPI.cpp  AndroidFeatures.cpp  AndroidVideoSource.cpp  ColorConversion.cpp  Makefile  VideoSource.cpp
Extended-Tracking/lib/SRC/ARosg/: Makefile
Extended-Tracking/lib/SRC/ARvrml/: Makefile  arViewer.cpp
Extended-Tracking/lib/SRC/Eden/: ALFramework.cpp  ALFramework.h  CWaves.cpp  CWaves.h  Makefile
Extended-Tracking/lib/SRC/Gl/: Makefile
Extended-Tracking/lib/SRC/KPM/: Makefile  kpmHandle.cpp  kpmMatching.cpp  kpmPrivate.h  kpmRefDataSet.cpp
Extended-Tracking/lib/SRC/KPM/FreakMatcher/matchers/: feature_point.h  visual_database-inline.h  visual_database.h
Extended-Tracking/lib/SRC/Util/: Makefile  thread_sub.c
Extended-Tracking/lib/SRC/Video/: Makefile
Extended-Tracking/lib/SRC/VideoDummy/: Makefile
Extended-Tracking/lib/SRC/VideoGStreamer/: Makefile
Extended-Tracking/lib/SRC/VideoImage/: Makefile
Extended-Tracking/lib/SRC/VideoLinux1394Cam/ver1/: Makefile
Extended-Tracking/lib/SRC/VideoLinux1394Cam/ver2/: Makefile
Extended-Tracking/lib/SRC/VideoLinuxV4L/: Makefile
Extended-Tracking/lib/SRC/VideoLinuxV4L2/: Makefile
Extended-Tracking/src/: Initializer.cc  ORBmatcher.cc  System.cc  Tracking.cc
工作总结文档/: ~$实习总结报告.docx
相关参考资料/: .gitattributes
